chore: ignore src/scripts folder
